update end-points
